added more testing data

--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,17 +986,8 @@
     "    feature_column, target_column, dataset, test_size=0.2, random_state=42\n",
     "):\n",
     "    \"\"\"\n",
-    "    Run classification models and print performance metrics, feature importance, and correlations.\n",
-    "\n",
-    "    Parameters:\n",
-    "        feature_column (list): List of feature columns.\n",
-    "        target_column (str): Name of the target column.\n",
-    "        dataset (pd.DataFrame): Input dataset.\n",
-    "        test_size (float): Test set size proportion.\n",
-    "        random_state (int): Random seed.\n",
-    "\n",
-    "    Returns:\n",
-    "        None: Prints results directly.\n",
+    "    Run classification models and print comprehensive performance metrics,\n",
+    "    feature importance, and correlations with target.\n",
     "    \"\"\"\n",
     "    warnings.filterwarnings(action=\"ignore\", category=UndefinedMetricWarning)\n",
     "    dataset = dataset.dropna()\n",
@@ -1020,75 +1011,72 @@
     "    # List to track model performance\n",
     "    model_results = []\n",
     "\n",
-    "    # Logistic Regression\n",
-    "    log_model = LogisticRegression(class_weight=\"balanced\", max_iter=200)\n",
-    "    log_model.fit(X_train, y_train)\n",
-    "    log_y_pred = log_model.predict(X_test)\n",
-    "    log_y_proba = log_model.predict_proba(X_test)[:, 1]\n",
-    "    log_roc_auc = roc_auc_score(y_test, log_y_proba)\n",
-    "    log_accuracy = accuracy_score(y_test, log_y_pred)\n",
-    "    model_results.append(\n",
-    "        {\n",
-    "            \"model\": \"Logistic Regression\",\n",
-    "            \"roc_auc\": log_roc_auc,\n",
-    "            \"accuracy\": log_accuracy,\n",
+    "    def evaluate_model(model, name):\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "        # Calculate metrics\n",
+    "        roc_auc = roc_auc_score(y_test, y_proba)\n",
+    "        acc = accuracy_score(y_test, y_pred)\n",
+    "        clf_report = classification_report(y_test, y_pred, output_dict=True)\n",
+    "\n",
+    "        # Store results\n",
+    "        metrics = {\n",
+    "            \"model\": name,\n",
+    "            \"roc_auc\": roc_auc,\n",
+    "            \"accuracy\": acc,\n",
+    "            \"precision\": clf_report[\"weighted avg\"][\"precision\"],\n",
+    "            \"recall\": clf_report[\"weighted avg\"][\"recall\"],\n",
+    "            \"f1\": clf_report[\"weighted avg\"][\"f1-score\"],\n",
     "        }\n",
-    "    )\n",
+    "        model_results.append(metrics)\n",
     "\n",
-    "    # Random Forest\n",
-    "    rfc_model = RandomForestClassifier(random_state=random_state)\n",
-    "    rfc_model.fit(X_train, y_train)\n",
-    "    rfc_y_pred = rfc_model.predict(X_test)\n",
-    "    rfc_y_proba = rfc_model.predict_proba(X_test)[:, 1]\n",
-    "    rfc_roc_auc = roc_auc_score(y_test, rfc_y_proba)\n",
-    "    rfc_accuracy = accuracy_score(y_test, rfc_y_pred)\n",
-    "    model_results.append(\n",
-    "        {\"model\": \"Random Forest\", \"roc_auc\": rfc_roc_auc, \"accuracy\": rfc_accuracy}\n",
-    "    )\n",
+    "        # Print detailed report\n",
+    "        print(f\"\\n{name} Classification Report:\")\n",
+    "        print(classification_report(y_test, y_pred))\n",
+    "        print(f\"ROC-AUC Score: {roc_auc:.3f}\")\n",
     "\n",
-    "    # LightGBM\n",
-    "    lgb_model = lgb.LGBMClassifier()\n",
-    "    lgb_model.fit(X_train, y_train)\n",
-    "    lgb_y_pred = lgb_model.predict(X_test)\n",
-    "    lgb_y_proba = lgb_model.predict_proba(X_test)[:, 1]\n",
-    "    lgb_roc_auc = roc_auc_score(y_test, lgb_y_proba)\n",
-    "    lgb_accuracy = accuracy_score(y_test, lgb_y_pred)\n",
-    "    model_results.append(\n",
-    "        {\"model\": \"LightGBM\", \"roc_auc\": lgb_roc_auc, \"accuracy\": lgb_accuracy}\n",
-    "    )\n",
+    "        return model\n",
     "\n",
-    "    # Balanced Random Forest\n",
-    "    brf_model = BalancedRandomForestClassifier(random_state=random_state)\n",
-    "    brf_model.fit(X_train, y_train)\n",
-    "    brf_y_pred = brf_model.predict(X_test)\n",
-    "    brf_y_proba = brf_model.predict_proba(X_test)[:, 1]\n",
-    "    brf_roc_auc = roc_auc_score(y_test, brf_y_proba)\n",
-    "    brf_accuracy = accuracy_score(y_test, brf_y_pred)\n",
-    "    model_results.append(\n",
-    "        {\n",
-    "            \"model\": \"Balanced Random Forest\",\n",
-    "            \"roc_auc\": brf_roc_auc,\n",
-    "            \"accuracy\": brf_accuracy,\n",
-    "        }\n",
-    "    )\n",
+    "    # Evaluate models\n",
+    "    models = [\n",
+    "        (\n",
+    "            LogisticRegression(class_weight=\"balanced\", max_iter=200),\n",
+    "            \"Logistic Regression\",\n",
+    "        ),\n",
+    "        (RandomForestClassifier(random_state=random_state), \"Random Forest\"),\n",
+    "        (lgb.LGBMClassifier(), \"LightGBM\"),\n",
+    "        (\n",
+    "            BalancedRandomForestClassifier(random_state=random_state),\n",
+    "            \"Balanced Random Forest\",\n",
+    "        ),\n",
+    "    ]\n",
+    "\n",
+    "    for model, name in models:\n",
+    "        evaluate_model(model, name)\n",
     "\n",
     "    # Determine best model\n",
     "    best_model = max(model_results, key=lambda x: x[\"roc_auc\"])\n",
-    "    print(f\"\\n=== BEST MODEL ===\")\n",
+    "    print(\"\\n=== BEST MODEL ===\")\n",
     "    print(f\"Model: {best_model['model']}\")\n",
     "    print(f\"ROC-AUC: {best_model['roc_auc']:.3f}\")\n",
     "    print(f\"Accuracy: {best_model['accuracy']:.3f}\")\n",
+    "    print(f\"Precision: {best_model['precision']:.3f}\")\n",
+    "    print(f\"Recall: {best_model['recall']:.3f}\")\n",
+    "    print(f\"F1-Score: {best_model['f1']:.3f}\")\n",
     "\n",
-    "    # Feature correlations with target (using original unscaled data)\n",
+    "    # Feature analysis\n",
     "    feature_correlations = X.corrwith(y)\n",
+    "    brf_model = BalancedRandomForestClassifier(random_state=random_state).fit(\n",
+    "        X_train, y_train\n",
+    "    )\n",
     "\n",
-    "    # Feature importance from Balanced Random Forest\n",
-    "    feature_importances = brf_model.feature_importances_\n",
     "    feature_importance_df = (\n",
     "        pd.DataFrame(\n",
     "            {\n",
     "                \"Feature\": feature_column,\n",
-    "                \"Importance\": feature_importances,\n",
+    "                \"Importance\": brf_model.feature_importances_,\n",
     "                \"Correlation\": feature_correlations,\n",
     "            }\n",
     "        )\n",
@@ -1102,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1098,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 6004, number of negative: 6004\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000218 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000330 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 255\n",
       "[LightGBM] [Info] Number of data points in the train set: 12008, number of used features: 1\n",
@@ -1134,72 +1122,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.96      0.71      0.82      1896\n",
-      "         1.0       0.20      0.72      0.31       186\n",
-      "\n",
-      "    accuracy                           0.72      2082\n",
-      "   macro avg       0.58      0.72      0.57      2082\n",
-      "weighted avg       0.89      0.72      0.77      2082\n",
-      "\n",
-      "ROC-AUC Score: 0.796\n",
-      "\n",
-      "Random Forest Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.94      0.79      0.86      1896\n",
-      "         1.0       0.20      0.52      0.28       186\n",
-      "\n",
-      "    accuracy                           0.77      2082\n",
-      "   macro avg       0.57      0.65      0.57      2082\n",
-      "weighted avg       0.88      0.77      0.81      2082\n",
-      "\n",
-      "ROC-AUC Score: 0.748\n",
       "[LightGBM] [Info] Number of positive: 6898, number of negative: 6898\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000092 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000288 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 510\n",
       "[LightGBM] [Info] Number of data points in the train set: 13796, number of used features: 2\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
       "\n",
-      "LGB Model Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
+      "=== BEST MODEL ===\n",
+      "Model: Logistic Regression\n",
+      "ROC-AUC: 0.796\n",
+      "Accuracy: 0.715\n",
       "\n",
-      "         0.0       0.96      0.75      0.84      1896\n",
-      "         1.0       0.21      0.68      0.33       186\n",
-      "\n",
-      "    accuracy                           0.75      2082\n",
-      "   macro avg       0.59      0.72      0.59      2082\n",
-      "weighted avg       0.89      0.75      0.80      2082\n",
-      "\n",
-      "ROC-AUC Score: 0.776\n",
-      "\n",
-      "Balanced Random Forest Classification for ['std_credit', 'std_balance']\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.94      0.79      0.86      1896\n",
-      "         1.0       0.19      0.51      0.28       186\n",
-      "\n",
-      "    accuracy                           0.76      2082\n",
-      "   macro avg       0.57      0.65      0.57      2082\n",
-      "weighted avg       0.88      0.76      0.81      2082\n",
-      "\n",
-      "ROC-AUC Score: 0.742\n"
+      "Top 20 Features with Correlation Direction:\n",
+      "    Feature  Importance  Correlation\n",
+      " std_credit    0.539985    -0.281688\n",
+      "std_balance    0.460015    -0.039617\n"
      ]
     }
    ],
    "source": [
-    "run_classification([\"std_credit\", \"std_balance\"], \"DQ_TARGET\", consumer_balance)\n"
+    "run_classification2([\"std_credit\", \"std_balance\"], \"DQ_TARGET\", consumer_balance)\n"
    ]
   },
   {
@@ -6583,25 +6533,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Logistic Regression Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      0.73      0.83      1802\n",
+      "         1.0       0.21      0.72      0.32       180\n",
+      "\n",
+      "    accuracy                           0.73      1982\n",
+      "   macro avg       0.59      0.72      0.58      1982\n",
+      "weighted avg       0.89      0.73      0.78      1982\n",
+      "\n",
+      "ROC-AUC Score: 0.787\n",
+      "\n",
+      "Random Forest Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.96      0.94      1802\n",
+      "         1.0       0.33      0.19      0.24       180\n",
+      "\n",
+      "    accuracy                           0.89      1982\n",
+      "   macro avg       0.62      0.58      0.59      1982\n",
+      "weighted avg       0.87      0.89      0.88      1982\n",
+      "\n",
+      "ROC-AUC Score: 0.794\n",
       "[LightGBM] [Info] Number of positive: 7232, number of negative: 7232\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.005161 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.009816 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 26927\n",
       "[LightGBM] [Info] Number of data points in the train set: 14464, number of used features: 114\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "\n",
+      "LightGBM Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.98      0.95      1802\n",
+      "         1.0       0.39      0.15      0.22       180\n",
+      "\n",
+      "    accuracy                           0.90      1982\n",
+      "   macro avg       0.66      0.56      0.58      1982\n",
+      "weighted avg       0.87      0.90      0.88      1982\n",
+      "\n",
+      "ROC-AUC Score: 0.788\n",
+      "\n",
+      "Balanced Random Forest Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.96      0.94      1802\n",
+      "         1.0       0.34      0.19      0.24       180\n",
+      "\n",
+      "    accuracy                           0.89      1982\n",
+      "   macro avg       0.63      0.58      0.59      1982\n",
+      "weighted avg       0.87      0.89      0.88      1982\n",
+      "\n",
+      "ROC-AUC Score: 0.794\n",
       "\n",
       "=== BEST MODEL ===\n",
       "Model: Balanced Random Forest\n",
       "ROC-AUC: 0.794\n",
       "Accuracy: 0.893\n",
+      "Precision: 0.869\n",
+      "Recall: 0.893\n",
+      "F1-Score: 0.879\n",
       "\n",
       "Top 20 Features with Correlation Direction:\n",
       "                             Feature  Importance  Correlation\n",
