testing different models

--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -14391,7 +14391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14399,25 +14399,167 @@
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(\"../src/base\"))\n",
-    "# from classify import run_classification\n",
     "from classify import run_classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'UndefinedMetricWarning' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[145], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m classification_features \u001b[38;5;241m=\u001b[39m consumer_features\u001b[38;5;241m.\u001b[39mcolumns[\u001b[38;5;241m4\u001b[39m:]\n\u001b[0;32m----> 2\u001b[0m run_classification(classification_features, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDQ_TARGET\u001b[39m\u001b[38;5;124m\"\u001b[39m, consumer_features)\n",
-      "File \u001b[0;32m~/Library/CloudStorage/GoogleDrive-kew024@ucsd.edu/My Drive/UCSD Winter Quarter 2025/dsc180b/dsc180b-capstone-q2/src/base/classify.py:49\u001b[0m, in \u001b[0;36mrun_classification\u001b[0;34m(feature_column, target_column, dataset, test_size, random_state)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_classification\u001b[39m(\n\u001b[1;32m     44\u001b[0m     feature_column, target_column, dataset, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m\n\u001b[1;32m     45\u001b[0m ):\n\u001b[1;32m     46\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;124;03m    Enhanced classification analysis with multiple models and comprehensive reporting.\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 49\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(action\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, category\u001b[38;5;241m=\u001b[39mUndefinedMetricWarning)\n\u001b[1;32m     50\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m dataset\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;66;03m# Define features and target\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'UndefinedMetricWarning' is not defined"
+     "data": {
+      "text/plain": [
+       "<module 'classify' from '/Users/kevinwong/Library/CloudStorage/GoogleDrive-kew024@ucsd.edu/My Drive/UCSD Winter Quarter 2025/dsc180b/dsc180b-capstone-q2/src/base/classify.py'>"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "import classify\n",
+    "\n",
+    "importlib.reload(classify)  # Reload the module\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mLogistic Regression Results\u001b[0m\n",
+      "ROC-AUC: 0.773 | Accuracy: 0.720\n",
+      "Training Time: 0.6s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.96      0.73      0.82      1802\n",
+      "         1.0       0.20      0.67      0.30       180\n",
+      "\n",
+      "    accuracy                           0.72      1982\n",
+      "   macro avg       0.58      0.70      0.56      1982\n",
+      "weighted avg       0.89      0.72      0.78      1982\n",
+      "\n",
+      "\n",
+      "\u001b[1mRandom Forest Results\u001b[0m\n",
+      "ROC-AUC: 0.787 | Accuracy: 0.888\n",
+      "Training Time: 8.2s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.96      0.94      1802\n",
+      "         1.0       0.32      0.20      0.24       180\n",
+      "\n",
+      "    accuracy                           0.89      1982\n",
+      "   macro avg       0.62      0.58      0.59      1982\n",
+      "weighted avg       0.87      0.89      0.88      1982\n",
+      "\n",
+      "[LightGBM] [Info] Number of positive: 7235, number of negative: 7235\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.009562 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 27246\n",
+      "[LightGBM] [Info] Number of data points in the train set: 14470, number of used features: 123\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "\n",
+      "\u001b[1mLightGBM Results\u001b[0m\n",
+      "ROC-AUC: 0.787 | Accuracy: 0.901\n",
+      "Training Time: 1.5s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.97      0.95      1802\n",
+      "         1.0       0.40      0.18      0.25       180\n",
+      "\n",
+      "    accuracy                           0.90      1982\n",
+      "   macro avg       0.66      0.58      0.60      1982\n",
+      "weighted avg       0.87      0.90      0.88      1982\n",
+      "\n",
+      "\n",
+      "\u001b[1mBalanced RF Results\u001b[0m\n",
+      "ROC-AUC: 0.786 | Accuracy: 0.884\n",
+      "Training Time: 9.9s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.95      0.94      1802\n",
+      "         1.0       0.28      0.18      0.22       180\n",
+      "\n",
+      "    accuracy                           0.88      1982\n",
+      "   macro avg       0.60      0.57      0.58      1982\n",
+      "weighted avg       0.86      0.88      0.87      1982\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [11:53:41] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mXGBoost Results\u001b[0m\n",
+      "ROC-AUC: 0.769 | Accuracy: 0.902\n",
+      "Training Time: 1.1s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.98      0.95      1802\n",
+      "         1.0       0.39      0.14      0.21       180\n",
+      "\n",
+      "    accuracy                           0.90      1982\n",
+      "   macro avg       0.66      0.56      0.58      1982\n",
+      "weighted avg       0.87      0.90      0.88      1982\n",
+      "\n",
+      "\n",
+      "\u001b[1mCatBoost Results\u001b[0m\n",
+      "ROC-AUC: 0.793 | Accuracy: 0.903\n",
+      "Training Time: 15.3s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.98      0.95      1802\n",
+      "         1.0       0.42      0.18      0.25       180\n",
+      "\n",
+      "    accuracy                           0.90      1982\n",
+      "   macro avg       0.67      0.58      0.60      1982\n",
+      "weighted avg       0.88      0.90      0.88      1982\n",
+      "\n",
+      "\n",
+      "\u001b[1mHistGB Results\u001b[0m\n",
+      "ROC-AUC: 0.796 | Accuracy: 0.902\n",
+      "Training Time: 4.0s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.92      0.98      0.95      1802\n",
+      "         1.0       0.40      0.17      0.24       180\n",
+      "\n",
+      "    accuracy                           0.90      1982\n",
+      "   macro avg       0.66      0.57      0.59      1982\n",
+      "weighted avg       0.87      0.90      0.88      1982\n",
+      "\n",
+      "\n",
+      "\u001b[1mSVM-RBF Results\u001b[0m\n",
+      "ROC-AUC: 0.778 | Accuracy: 0.788\n",
+      "Training Time: 96.9s\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.81      0.87      1802\n",
+      "         1.0       0.23      0.58      0.33       180\n",
+      "\n",
+      "    accuracy                           0.79      1982\n",
+      "   macro avg       0.59      0.69      0.60      1982\n",
+      "weighted avg       0.89      0.79      0.82      1982\n",
+      "\n"
      ]
     }
    ],
