--- a/src/notebooks/kurumi_q2_eda.ipynb
+++ b/src/notebooks/kurumi_q2_eda.ipynb
@@ -5803,9 +5803,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "id": "3c943bbf-b37f-4a63-902a-cc7ab364da41",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5844,6 +5846,9 @@
        "      <th>negative_days</th>\n",
        "      <th>pecent_neg</th>\n",
        "      <th>percent_neg</th>\n",
+       "      <th>negative_trans_count</th>\n",
+       "      <th>transaction_count</th>\n",
+       "      <th>percent_neg_trans_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5861,10 +5866,13 @@
        "      <td>2021-08-31</td>\n",
        "      <td>320.37</td>\n",
        "      <td>1292.42</td>\n",
-       "      <td>179</td>\n",
+       "      <td>180</td>\n",
        "      <td>4</td>\n",
        "      <td>0.022346</td>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>4</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.009804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109568</th>\n",
@@ -5880,10 +5888,13 @@
        "      <td>2021-08-31</td>\n",
        "      <td>320.37</td>\n",
        "      <td>1264.80</td>\n",
-       "      <td>179</td>\n",
+       "      <td>180</td>\n",
        "      <td>4</td>\n",
        "      <td>0.022346</td>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>4</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.009804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109604</th>\n",
@@ -5899,10 +5910,13 @@
        "      <td>2021-08-31</td>\n",
        "      <td>320.37</td>\n",
        "      <td>2664.80</td>\n",
-       "      <td>179</td>\n",
+       "      <td>180</td>\n",
        "      <td>4</td>\n",
        "      <td>0.022346</td>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>4</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.009804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109605</th>\n",
@@ -5918,10 +5932,13 @@
        "      <td>2021-08-31</td>\n",
        "      <td>320.37</td>\n",
        "      <td>2639.70</td>\n",
-       "      <td>179</td>\n",
+       "      <td>180</td>\n",
        "      <td>4</td>\n",
        "      <td>0.022346</td>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>4</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.009804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109606</th>\n",
@@ -5937,10 +5954,13 @@
        "      <td>2021-08-31</td>\n",
        "      <td>320.37</td>\n",
        "      <td>2139.70</td>\n",
-       "      <td>179</td>\n",
+       "      <td>180</td>\n",
        "      <td>4</td>\n",
        "      <td>0.022346</td>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.022222</td>\n",
+       "      <td>4</td>\n",
+       "      <td>408</td>\n",
+       "      <td>0.009804</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -5962,36 +5982,46 @@
        "109606           DEBIT  2021-03-18      2021-09-01         726.0        0.0   \n",
        "\n",
        "       balance_date  balance  running_balance  days  negative_days  \\\n",
-       "109603   2021-08-31   320.37          1292.42   179              4   \n",
-       "109568   2021-08-31   320.37          1264.80   179              4   \n",
-       "109604   2021-08-31   320.37          2664.80   179              4   \n",
-       "109605   2021-08-31   320.37          2639.70   179              4   \n",
-       "109606   2021-08-31   320.37          2139.70   179              4   \n",
+       "109603   2021-08-31   320.37          1292.42   180              4   \n",
+       "109568   2021-08-31   320.37          1264.80   180              4   \n",
+       "109604   2021-08-31   320.37          2664.80   180              4   \n",
+       "109605   2021-08-31   320.37          2639.70   180              4   \n",
+       "109606   2021-08-31   320.37          2139.70   180              4   \n",
        "\n",
-       "        pecent_neg  percent_neg  \n",
-       "109603    0.022346     0.022346  \n",
-       "109568    0.022346     0.022346  \n",
-       "109604    0.022346     0.022346  \n",
-       "109605    0.022346     0.022346  \n",
-       "109606    0.022346     0.022346  "
+       "        pecent_neg  percent_neg  negative_trans_count  transaction_count  \\\n",
+       "109603    0.022346     0.022222                     4                408   \n",
+       "109568    0.022346     0.022222                     4                408   \n",
+       "109604    0.022346     0.022222                     4                408   \n",
+       "109605    0.022346     0.022222                     4                408   \n",
+       "109606    0.022346     0.022222                     4                408   \n",
+       "\n",
+       "        percent_neg_trans_count  \n",
+       "109603                 0.009804  \n",
+       "109568                 0.009804  \n",
+       "109604                 0.009804  \n",
+       "109605                 0.009804  \n",
+       "109606                 0.009804  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# account days\n",
-    "sorted_balance_trans[\"days\"] = sorted_balance_trans.groupby(\"prism_consumer_id\")[\"posted_date\"].transform(lambda x: (x.max() - x.min()).days)\n",
-    "sorted_balance_trans[\"negative_days\"] = sorted_balance_trans.groupby(\"prism_consumer_id\")[\"running_balance\"].transform(lambda x: (x < 0).sum())\n",
-    "sorted_balance_trans[\"percent_neg\"] = sorted_balance_trans[\"negative_days\"] / sorted_balance_trans[\"days\"]\n",
+    "sorted_balance_trans[\"days\"] = sorted_balance_trans.groupby(\"prism_consumer_id\")[\"posted_date\"].transform(lambda x: (x.max() - x.min()).days + 1)\n",
+    "sorted_balance_trans[\"transaction_count\"] = sorted_balance_trans.groupby(\"prism_consumer_id\")[\"posted_date\"].transform(lambda x: x.count())\n",
+    "sorted_balance_trans[\"negative_trans_count\"] = sorted_balance_trans.groupby(\"prism_consumer_id\")[\"running_balance\"].transform(lambda x: (x < 0).sum())\n",
+    "# sorted_balance_trans[\"negative_days\"] = sorted_balance_trans.groupby(\"prism_consumer_id\", \"posted_date\")[\"running_balance\"].transform(lambda x: )\n",
+    "# sorted_balance_trans[\"percent_neg_days\"] = sorted_balance_trans[\"negative_trans_count\"] / sorted_balance_trans[\"days\"]\n",
+    "sorted_balance_trans[\"percent_neg_trans_count\"] = sorted_balance_trans[\"negative_trans_count\"] / sorted_balance_trans[\"transaction_count\"]\n",
     "sorted_balance_trans.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "id": "ab5394f1-7c28-41fa-981b-e2758e826342",
    "metadata": {},
    "outputs": [
@@ -6016,7 +6046,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>percent_neg</th>\n",
+       "      <th>percent_neg_trans_count</th>\n",
        "      <th>DQ_TARGET</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6028,27 +6058,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.022346</td>\n",
+       "      <td>0.009804</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.011111</td>\n",
+       "      <td>0.006369</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0.016667</td>\n",
+       "      <td>0.008798</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>0.486034</td>\n",
+       "      <td>0.713115</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
-       "      <td>0.177778</td>\n",
+       "      <td>0.151659</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6063,7 +6093,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>2.061111</td>\n",
+       "      <td>0.833708</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -6073,12 +6103,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>0.150000</td>\n",
+       "      <td>0.033292</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>0.350000</td>\n",
+       "      <td>0.103789</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -6087,36 +6117,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                   percent_neg  DQ_TARGET\n",
-       "prism_consumer_id                        \n",
-       "0                     0.022346        0.0\n",
-       "1                     0.011111        0.0\n",
-       "10                    0.016667        0.0\n",
-       "100                   0.486034        0.0\n",
-       "1000                  0.177778        0.0\n",
-       "...                        ...        ...\n",
-       "995                   0.000000        0.0\n",
-       "996                   2.061111        0.0\n",
-       "997                   0.000000        0.0\n",
-       "998                   0.150000        0.0\n",
-       "999                   0.350000        0.0\n",
+       "                   percent_neg_trans_count  DQ_TARGET\n",
+       "prism_consumer_id                                    \n",
+       "0                                 0.009804        0.0\n",
+       "1                                 0.006369        0.0\n",
+       "10                                0.008798        0.0\n",
+       "100                               0.713115        0.0\n",
+       "1000                              0.151659        0.0\n",
+       "...                                    ...        ...\n",
+       "995                               0.000000        0.0\n",
+       "996                               0.833708        0.0\n",
+       "997                               0.000000        0.0\n",
+       "998                               0.033292        0.0\n",
+       "999                               0.103789        0.0\n",
        "\n",
        "[10122 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "running_balance_neg = sorted_balance_trans.groupby(\"prism_consumer_id\")[[\"percent_neg\", \"DQ_TARGET\"]].mean()\n",
+    "running_balance_neg = sorted_balance_trans.groupby(\"prism_consumer_id\")[[\"percent_neg_trans_count\", \"DQ_TARGET\"]].mean()\n",
     "running_balance_neg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "id": "e9bd966f-97eb-4d13-84cb-2afd1386bb54",
    "metadata": {},
    "outputs": [
@@ -6145,7 +6175,7 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th></th>\n",
-       "      <th colspan=\"8\" halign=\"left\">percent_neg</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">percent_neg_trans_count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -6173,39 +6203,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0.0</th>\n",
-       "      <td>9083.0</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9259.0</td>\n",
+       "      <td>0.088284</td>\n",
+       "      <td>0.178799</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.016667</td>\n",
-       "      <td>0.238636</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>0.006928</td>\n",
+       "      <td>0.086104</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1.0</th>\n",
-       "      <td>857.0</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>863.0</td>\n",
+       "      <td>0.161980</td>\n",
+       "      <td>0.204158</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.027933</td>\n",
-       "      <td>0.232558</td>\n",
-       "      <td>0.704545</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>0.014085</td>\n",
+       "      <td>0.087719</td>\n",
+       "      <td>0.223074</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          percent_neg                                                 \n",
-       "                count mean std  min       25%       50%       75%  max\n",
-       "DQ_TARGET                                                             \n",
-       "0.0            9083.0  inf NaN  0.0  0.000000  0.016667  0.238636  inf\n",
-       "1.0             857.0  inf NaN  0.0  0.027933  0.232558  0.704545  inf"
+       "          percent_neg_trans_count                                     \\\n",
+       "                            count      mean       std  min       25%   \n",
+       "DQ_TARGET                                                              \n",
+       "0.0                        9259.0  0.088284  0.178799  0.0  0.000000   \n",
+       "1.0                         863.0  0.161980  0.204158  0.0  0.014085   \n",
+       "\n",
+       "                                    \n",
+       "                50%       75%  max  \n",
+       "DQ_TARGET                           \n",
+       "0.0        0.006928  0.086104  1.0  \n",
+       "1.0        0.087719  0.223074  1.0  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6216,8 +6252,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "9b5903cb-366d-41e1-8b9f-78d1f6f84713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression for ['percent_neg_trans_count']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.94      0.77      0.84      1855\n",
+      "         1.0       0.15      0.45      0.22       170\n",
+      "\n",
+      "    accuracy                           0.74      2025\n",
+      "   macro avg       0.54      0.61      0.53      2025\n",
+      "weighted avg       0.87      0.74      0.79      2025\n",
+      "\n",
+      "ROC-AUC Score: 0.689\n",
+      "\n",
+      "Random Forest Classification for ['percent_neg_trans_count']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.94      0.75      0.83      1855\n",
+      "         1.0       0.14      0.44      0.21       170\n",
+      "\n",
+      "    accuracy                           0.72      2025\n",
+      "   macro avg       0.54      0.59      0.52      2025\n",
+      "weighted avg       0.87      0.72      0.78      2025\n",
+      "\n",
+      "ROC-AUC Score: 0.550\n",
+      "[LightGBM] [Info] Number of positive: 6344, number of negative: 6344\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000248 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 255\n",
+      "[LightGBM] [Info] Number of data points in the train set: 12688, number of used features: 1\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "\n",
+      "LGB Model Classification for ['percent_neg_trans_count']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.67      0.78      1855\n",
+      "         1.0       0.14      0.58      0.22       170\n",
+      "\n",
+      "    accuracy                           0.66      2025\n",
+      "   macro avg       0.54      0.63      0.50      2025\n",
+      "weighted avg       0.88      0.66      0.74      2025\n",
+      "\n",
+      "ROC-AUC Score: 0.638\n",
+      "\n",
+      "Balanced Random Forest Classification for ['percent_neg_trans_count']\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.94      0.75      0.83      1855\n",
+      "         1.0       0.14      0.43      0.21       170\n",
+      "\n",
+      "    accuracy                           0.73      2025\n",
+      "   macro avg       0.54      0.59      0.52      2025\n",
+      "weighted avg       0.87      0.73      0.78      2025\n",
+      "\n",
+      "ROC-AUC Score: 0.551\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_classification([\"percent_neg_trans_count\"], \"DQ_TARGET\", running_balance_neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d186d2-3621-492c-90dd-55e1b6d2a77a",
    "metadata": {},
    "outputs": [],
    "source": []
