--- a/src/notebooks/hillary_q2.ipynb
+++ b/src/notebooks/hillary_q2.ipynb
@@ -3315,6 +3315,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (negative_balance_ratio)​: if that account balance is negative we count it as once the balance has fallen negative and divide that by the number of transactions/balances there have been "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many times the balance went negative within span of how long account has been created for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# each category (how much was spent on each category -> one's for credit, debit, total transactions) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# multiple features: get number of times balance falls below certain amounts/threshold ($25, $50, $100) divided by the number of transactions there are\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
