--- a/src/notebooks/kevin_q2_eda.ipynb
+++ b/src/notebooks/kevin_q2_eda.ipynb
@@ -13605,6 +13605,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using amount/count of money spent per category (dependent on inflows/outflows), as well as one-hot encoded category of bank account someone may have (i.e. checkings, savings, ROTH IRA, etc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -13969,7 +13976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
